# Trishika_Realestate

./: .gitignore  EMAIL_SETUP.md  README.md  app.py  database.py  deploy.ps1  deploy.sh  main.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: admin_inquiries.html  admin_login.html  base.html  enquiry.html  index.html  listings.html
tests/: test_main.py
