[project]
name = "new-env"
version = "0.1.0"
description = "A sample Python development environment"
authors = [
  { name = "Developer" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["Flask>=3.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
